[package]
name = "triphase-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
triphase-common = { path = "../triphase-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "triphase"
path = "src/main.rs"
